Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
 <p>GmSSL项目目前由北京大学信息安全实验室开发和维护，项目的长期目标是推动国产密码算法在国内互联网和开源领域的广泛应用，提高国内商用非涉密领域的自主密码应用水平。</p>
 
 <h2>
+<a id="gmssl-20" class="anchor" href="#gmssl-20" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GmSSL 2.0</h2>
+
+<p>GmSSL项目目前在开发2.0版本，预计在2016年10月发布2.0的首个版本，开发周期大约为10个月。GmSSL 2.x最终将包含如下主要更新：</p>
+
+<ol>
+<li>支持国密SM2/SM3/SM4/SM9、国密证书以及TLS 1.1/1.2的国密算法套件。</li>
+<li>支持1-2款具有商密型号的国产密码硬件</li>
+<li>将2-3个重要的基于OpenSSL的开源项目移植到GmSSL</li>
+<li>将GmSSL基于的OpenSSL从1.0.2版本升级至1.1.0版本</li>
+<li>形成开放的开发者社区</li>
+</ol>
+
+<h2>
 <a id="编译和安装" class="anchor" href="#%E7%BC%96%E8%AF%91%E5%92%8C%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>编译和安装</h2>
 
 <p>OpenSSL通过其独有的编译脚本支持非常广泛的硬件和操作系统，GmSSL项目力求保持其跨平台特性。目前GmSSL可以在Linux平台和苹果OS X平台顺利编译安装，在Windows上暂时无法编译通过。我们预计可以在下一个版本发布时修正Windows平台的编译问题。</p>
